--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -48,3 +48,19 @@ body, html {
   background-color: #393f4d;
   grid-column: 1 / 3;
 }
+
+/*solution*/
+body
+{
+  background-color: black;
+
+}
+
+.container
+{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  gap: 15px;
+
+}
